# par

./: test
ex2/: CMakeLists.txt
ex2/maps/: arena.txt  autolab.txt  cave.txt  hospital.txt
ex2/src/: canvas.cc  canvas.h  main.cc  map_grid.cc  map_grid.h  planner.cc  planner.h  window.cc  window.h
ex2/src/imr-h/: imr_exceptions.h  logging.h
ex3/: CMakeLists.txt  instructions.txt  setup.sh
ex3/gazebo/model/kobuki_with_laser/: kobuki.sdf  model.config
ex3/gazebo/plugin/: CMakeLists.txt  laserplugin.cc  laserplugin.h  main.cc  plugin.cc  plugin.h  publisher.cc  subscriber.cc
ex3/gazebo/plugin/msgs/: CMakeLists.txt  messages.proto
ex3/gazebo/worlds/: par_lab1.world  par_lab3.xml
ex3/info/: repository_structure.txt
ex3/interface/: CMakeLists.txt
ex3/interface/Mk/: local.mk.example
ex3/interface/include/robot/: common.h  laser_sensor.h  pose.h  robot_interface.h
ex3/interface/include/robot_client/: robot_client.h
ex3/interface/include/robot_messages/: robot_messages.h
ex3/interface/msgs/: CMakeLists.txt  robot_messages.proto
ex3/interface/src/robot/: common.cc  laser_sensor.cc  robot_interface.cc
ex3/interface/src/robot_client/: robot_client.cc  robot_client_laser.cc  trobot_client.cc
ex3/interface/src/robot_messages/: robot_messages.cc
ex3/robot/Mk/: common.mk  robot.mk
ex3/robot/include/dummy_robot/: dummy_laser.h  dummy_robot.h
ex3/robot/include/kobuki/: kobuki_robot.h
ex3/robot/include/robot_server/: robot_server.h
ex3/robot/include/sick/: LMS1xx.h  laser_sick.h
ex3/robot/src/bridge/: ignition_bridge.cc  ignition_bridge.h  run_client.sh  run_server.sh
ex3/robot/src/dummy_robot/: dummy_laser.cc  dummy_robot.cc
ex3/robot/src/examples/: battery.cc  tkobuki.cc
ex3/robot/src/examples/dock_drive/include/kobuki_dock_drive/: dock_drive.h  state.h
ex3/robot/src/examples/dock_drive/src/: dock_drive.cc  dock_drive_debug.cc  dock_drive_states.cc  tdock_drive.cc
ex3/robot/src/examples/joy_drive/: joy_drive.cc  joystick.h
ex3/robot/src/kobuki/: kobuki_robot.cc
ex3/robot/src/kobuki_server/: kobuki_server.cc
ex3/robot/src/robot_server/: robot_server.cc  tpublisher.cc  trobot_server.cc  tsubscriber.cc
ex3/robot/src/sick/: LMS1xx.cc  laser_sick.cc
ex3/student/ex3/: CMakeLists.txt  main.cc
ex3/student/ex3/src/: control.cc  control.h  dijkstra_heap.h  dijkstra_heap.tpp  exploration.cc  exploration.h  logging.h  map_grid.cc  map_grid.h  planner.cc  planner.h  point.cc  point.h  snd.cc  snd.h  window.cc  window.h
ex3/student/ex3/src/imr-h/: imr_assert.h  logging.h
ex3/turtlebot_kobuki/: install.sh
ex3/turtlebot_kobuki/Mk/: local.mk.example
ex3/turtlebot_kobuki/driver/src/: battery.cpp  command.cpp  core_sensors.cpp  diff_drive.cpp  event_manager.cpp  kobuki.cpp  packet_finder.cpp
ex3/turtlebot_kobuki/ecl_core/ecl_type_traits/include/ecl/type_traits/: numeric_limits.hpp
ex3/turtlebot_kobuki/ecl_lite/ecl_config/include/ecl/config/: cmake_install.cmake  ecl.hpp  portable_types.hpp
ex3/turtlebot_kobuki/ecl_lite/ecl_time_lite/include/ecl/time_lite/: cmake_install.cmake  config.hpp
ex3/turtlebot_kobuki/examples/: basic.cpp
